--- a/SharingPlatform/src/main/resources/application.yml
+++ b/SharingPlatform/src/main/resources/application.yml
@@ -7,7 +7,7 @@ mybatis:
 spring: 
    datasource: 
     driver-class-name: com.mysql.cj.jdbc.Driver           # mysql驱动包
-    url: jdbc:mysql://localhost:3306/class?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true           # 数据库名称
+    url: jdbc:mysql://localhost:3306/shares?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true           # 数据库名称
     username: root
     password: 123456
 
