--- a/SharingPlatform/pom.xml
+++ b/SharingPlatform/pom.xml
@@ -8,11 +8,12 @@
 		<version>2.1.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.xuchaobo</groupId>
-	<artifactId>SpringBoot03_mybatis_xml</artifactId>
+
+	<groupId>com.maven.zp</groupId>
+	<artifactId>demo1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>SpringBoot03_mybatis_xml</name>
+	<name>SharingPlatform</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -48,19 +49,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>			
-		</dependency>
-		
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
+			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
@@ -80,7 +69,32 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-       
+        
+
+        <!-- poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.16</version>
+		</dependency>
+		
+		<!-- the upgrade version of poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.16</version>
+		</dependency>
+		
+		<!-- json -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<type>jar</type>
+			<classifier>jdk15</classifier>
+			<scope>compile</scope>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
