--- a/SharingPlatform/pom.xml
+++ b/SharingPlatform/pom.xml
@@ -94,6 +94,30 @@
 			<classifier>jdk15</classifier>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>dom4j</groupId>
+		    <artifactId>dom4j</artifactId>
+		</dependency>
+		
+		<dependency>  
+	        <groupId>xom</groupId>  
+	        <artifactId>xom</artifactId>  
+	        <version>1.2.5</version>  
+	    </dependency> 
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
+		    <version>1.2.24</version>
+		</dependency>
+		
 	
 	</dependencies>
 
