--- a/SharingPlatform/src/main/resources/application.yml
+++ b/SharingPlatform/src/main/resources/application.yml
@@ -10,10 +10,16 @@ spring:
     url: jdbc:mysql://localhost:3306/shares?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true           # 数据库名称
     username: root
     password: 123456
-
-
-
-        
+    
+# Tomcat
+# Tomcat
+server:
+    tomcat:
+        uri-encoding: UTF-8
+        max-threads: 1000
+        min-spare-threads: 30
+    port: 8080
+    servlet.context-path: /shares
         
     
       
